# gapic-generator-cpp

./: .clang-format  .gitattributes  .gitignore  BUILD.bazel  CMakeLists.txt  README.md  WORKSPACE  repositories.bzl
ci/: check-include-guards.gawk  check-style.sh  install-bazel.sh  install-clang-format.sh
ci/kokoro/docker/: run_e2e_test.sh
ci/kokoro/docker/e2e/: CMakeLists.txt  Dockerfile  spanner-e2e.cc  spanner_e2e.cc
ci/kokoro/ubuntu/: build.sh  continuous.cfg
cmake/: FindGMockWithTargets.cmake  GapicGeneratorCommon.cmake
docs/: GENERATOR.md  LRO_DESIGN.md  PAGINATION.md  README.md  STATUS.md  SURFACE.md
gax/: BUILD.bazel  CMakeLists.txt  backoff_policy.cc  backoff_policy.h  backoff_policy_test.cc  backoff_policy_unittest.cc  call_context.cc  call_context.h  call_context_test.cc  call_context_unittest.cc  config-version.cmake.in  config.cmake.in  operation.h  operation_test.cc  operation_unittest.cc  operations_client.cc  operations_client.h  operations_stub.cc  operations_stub.h  operations_stub_test.cc  operations_stub_unittest.cc  pagination.h  pagination_test.cc  repositories.bzl  retry_loop.h  retry_loop_test.cc  retry_policy.h  retry_policy_test.cc  retry_policy_unittest.cc  status.cc  status.h  status_or.h  status_or_test.cc  status_or_unittest.cc  status_test.cc  status_unittest.cc
gax/internal/: gtest_prod.h  invoke_result.h  test_clock.h
generator/: BUILD.bazel  README.md  gapic_generator.cc  gapic_generator.h  gapic_generator_test.cc  gapic_generator_unittest.cc  main.cc  plugin.cc  standalone.cc  standalone.h
generator/internal/: cc_stub_generator.cc  cc_stub_generator.h  client_cc_generator.cc  client_cc_generator.h  client_cc_stub_generator.cc  client_cc_stub_generator.h  client_header_generator.cc  client_header_generator.h  client_header_stub_generator.cc  client_header_stub_generator.h  data_model.h  gapic_common_templates.h  gapic_generator.h  gapic_header_templates.h  gapic_template.cc  gapic_template.h  gapic_utils.cc  gapic_utils.h  gapic_utils_test.cc  gapic_utils_unittest.cc  generator_data_utils.h  header_stub_generator.cc  header_stub_generator.h  printer.h  stub_cc_generator.cc  stub_cc_generator.h  stub_header_generator.cc  stub_header_generator.h
generator/testdata/: BUILD.bazel  library.proto
generator/tests/: BUILD.bazel  gapic_generator_unittest.cc
generator/tests/internal/: gapic_utils_unittest.cc
generator/tests/testdata/: library.proto
rules_gapic/cpp/: cc_gapic.bzl
