# Copyright 2019 Google Inc.  All rights reserved
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

licenses(["notice"])  # Apache 2.0

cc_library(
    name = "gax",
    srcs = [],
    hdrs = [
        "retry_policy.h",
    ],
    deps = [
    ],
)

gax_unit_tests = [
    "retry_policy_unittest.cc",
]

[cc_test(
    name = "gax_" + test.replace(".cc", ""),
    size = "small",
    srcs = [test],
    deps = [
        "//gax",
        "@gtest//:gtest_main",
    ],
) for test in gax_unit_tests]
