# Copyright 2019 Google Inc.  All rights reserved
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

licenses(["notice"])  # Apache 2.0

# Note: googleapis doesn't define a cc_proto_library for operations_proto,
# so declare one here ourselves.
cc_proto_library(
    name = "longrunning_cpp_proto",
    deps = ["@com_google_googleapis//google/longrunning:operations_proto"],
)

cc_library(
    name = "gax",
    srcs = [
        "backoff_policy.cc",
        "call_context.cc",
        "internal/gtest_prod.h",
        "operations_client.cc",
        "operations_stub.cc",
        "status.cc",
    ],
    hdrs = [
        "backoff_policy.h",
        "call_context.h",
        "retry_loop.h",
        "retry_policy.h",
        "operation.h",
        "operations_client.h",
        "operations_stub.h",
        "status.h",
        "status_or.h",
    ],
    deps = [
        "@com_github_grpc_grpc//:grpc++",
        ":longrunning_cpp_proto",
    ],
)

gax_unit_tests = [
    "backoff_policy_test.cc",
    "call_context_test.cc",
    "operation_test.cc",
    "operations_stub_test.cc",
    "retry_loop_test.cc",
    "retry_policy_test.cc",
    "status_test.cc",
    "status_or_test.cc",
]

[cc_test(
    name = "gax_" + test.replace(".cc", ""),
    size = "small",
    srcs = [test],
    deps = [
        "//gax",
        "@gtest//:gtest_main",
    ],
) for test in gax_unit_tests]
