# Copyright 2019 Google Inc.  All rights reserved
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

licenses(["notice"])  # Apache 2.0

# TODO(michaelbausor) move this rule into api-common-protos
cc_proto_library(
    name = "cc_google_api_client_proto",
    deps = ["@api_common_protos//google/api:client_proto"],
)

cc_library(
    name = "cpp_gapic_generator",
    srcs = [
        "gapic_generator.cc",
        "internal/gapic_utils.h",
        "internal/gapic_template.h",
        "internal/gapic_template.cc",
    ],
    hdrs = [
        "gapic_generator.h",
    ],
    deps = [
        "@absl//absl/base",
        "@absl//absl/strings",
        "@com_google_protobuf//:protoc_lib",
        ":cc_google_api_client_proto",
    ],
)

cc_binary(
    name = "cpp_gapic_generator_plugin",
    srcs = ["plugin.cc"],
    deps = [
        ":cpp_gapic_generator",
    ],
)
