# Copyright 2019 Google Inc.  All rights reserved
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

licenses(["notice"])  # Apache 2.0

cc_library(
    name = "cpp_gapic_generator",
    srcs = [
        "gapic_generator.cc",
        "internal/client_cc_generator.cc",
        "internal/client_cc_generator.h",
        "internal/client_header_generator.cc",
        "internal/client_header_generator.h",
        "internal/data_model.h",
        "internal/gapic_utils.cc",
        "internal/gapic_utils.h",
        "internal/printer.h",
    ],
    hdrs = [
        "gapic_generator.h",
    ],
    deps = [
        "@absl//absl/base",
        "@absl//absl/strings",
        "@api_common_protos//google/api:client_cc_proto",
        "@com_google_protobuf//:protoc_lib",
    ],
)

cc_binary(
    name = "cpp_gapic_generator_plugin",
    srcs = ["plugin.cc"],
    deps = [
        ":cpp_gapic_generator",
    ],
)

cc_test(
    name = "gapic_generator_unittest",
    size = "small",
    srcs = ["gapic_generator_unittest.cc"],
    data = glob(
        ["testdata/**"],
    ) + [
        "@api_common_protos//google/api:client_proto",
    ],
    deps = [
        "//generator:cpp_gapic_generator",
        "@gtest//:gtest_main",
    ],
)

generator_unit_tests = [
    "internal/gapic_utils_unittest.cc",
]

[cc_test(
    name = "generator_" + test.replace("/", "_").replace(".cc", ""),
    size = "small",
    srcs = [test],
    deps = [
        "//generator:cpp_gapic_generator",
        "@absl//absl/base",
        "@absl//absl/strings",
        "@gtest//:gtest_main",
    ],
) for test in generator_unit_tests]
