# Copyright 2019 Google Inc.  All rights reserved
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

licenses(["notice"])  # Apache 2.0

cc_library(
    name = "gapic_generator",
    srcs = [
        "gapic_generator.cc",
        "internal/client_cc_generator.cc",
        "internal/client_cc_generator.h",
        "internal/client_header_generator.cc",
        "internal/client_header_generator.h",
        "internal/data_model.h",
        "internal/gapic_utils.cc",
        "internal/gapic_utils.h",
        "internal/printer.h",
        "internal/stub_cc_generator.cc",
        "internal/stub_cc_generator.h",
        "internal/stub_header_generator.cc",
        "internal/stub_header_generator.h",
        "standalone.cc",
        "standalone.h",
    ],
    hdrs = [
        "gapic_generator.h",
    ],
    includes = ["."],
    deps = [
        "@absl//absl/base",
        "@absl//absl/strings",
        "@api_common_protos//google/api:client_cc_proto",
        "@com_google_protobuf//:protoc_lib",
    ],
)

# The protoc plugin/standalone binary. The name (proto-gen-cpp_gapic) is ugly
# but it is a naming requirement for protoc plugins. To use --cpp_gapic_out
# command line argument without need to provide additional --plugin argument,
# the binary must be named proto-gen-cpp_gapic and placed in a PATH.
cc_binary(
    name = "protoc-gen-cpp_gapic",
    srcs = ["main.cc"],
    includes = ["."],
    visibility = ["//visibility:public"],
    deps = [":gapic_generator"],
)

cc_test(
    name = "gapic_generator_test",
    size = "small",
    srcs = ["gapic_generator_test.cc"],
    data = [
        "//generator/testdata:library_proto",
        "//generator/testdata:library_service_baseline",
        "@api_common_protos//google/api:client_proto",
        "@com_google_protobuf//:descriptor_proto",
    ],
    deps = [
        ":gapic_generator",
        "//generator/testdata:library_cc_gapic",
        "@gtest//:gtest_main",
    ],
)

[cc_test(
    name = "generator_" + test.replace("/", "_").replace(".cc", ""),
    size = "small",
    srcs = [test],
    deps = [
        "//generator:gapic_generator",
        "@absl//absl/base",
        "@absl//absl/strings",
        "@gtest//:gtest_main",
    ],
) for test in [
    "internal/gapic_utils_test.cc",
]]
